src/objects/BRP_Log__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>BRP Logs</relationshipLabel>
        <relationshipName>BRP_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Messages__c</fullName>
        <label>Error Messages</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BRP_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_BOD_Id__c</fullName>
        <label>Request BOD Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Params__c</fullName>
        <label>Request Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_BOD_Id__c</fullName>
        <label>Response BOD Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BRP Log</label>
    <nameField>
        <displayFormat>BRPL-{00000000}</displayFormat>
        <label>BRP Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRP Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>